# copilot_glide

./: .gitignore  README.md  app.ipynb  explore.ipynb  foo.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  package.json  tailwind.config.js
frontend/components/: AppHeader.tsx  PromptForm.tsx  UpsampleForm.tsx
frontend/pages/: index.tsx
frontend/pages/api/: airtist.ts
glide-server/: pyproject.toml
glide-server/glide_server/: main.py
glide-server/tests/: test_glide_server.py
