[tool.poetry]
name = "glide-server"
version = "0.1.0"
description = ""
authors = ["bookRa <omar.abdelbadie1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'glide_server.main:start'#uvicorn.run("main")'# main:app --reload'